--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# don't leak pems or keys from tests
+**/test_ca_dir/
+**/test_certs/
+**/*.pem
+**/*.PEM
+**/*.key
+**/*.KEY
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -134,3 +142,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.aider*
