--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@opsimathically/certificateauthority",
   "version": "1.0.0",
-  "description": "Generates certs as a CA authority",
+  "description": "Generates certs as a CA authority; stores them in a sqlite cert store.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -38,7 +38,7 @@
   "author": "Jason Medeiros",
   "license": "MIT",
   "dependencies": {
-    "@opsimathically/deferred": "^1.0.0",
+    "@opsimathically/deferred": "latest",
     "better-sqlite3": "^11.9.1",
     "node-forge": "^1.3.1"
   }
